# wingman

./: .gitignore  bun.lockb  hello.py  package-lock.json  package.json  parsed.txt  pyproject.toml  server.py  transcription.py  wrangler.toml
TranscriptAnalyzer/: sampleTranscripts.ts
src/: index.ts  schema.sql
src/TranscriptAnalyzer/: sampleTranscripts.js  sampleTranscripts.ts  transcriptAnalyzer.js  transcriptAnalyzer.ts
