[project]
name = "friendhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.8",
    "bleak>=0.22.2",
    "fastapi[standard]>=0.115.0",
    "numpy>=2.1.1",
    "openai>=1.50.2",
    "opuslib>=3.0.1",
    "pyaudio>=0.2.14",
    "scipy>=1.14.1",
    "websockets>=13.1",
]
